# timer-rs

./: CODEOWNERS  Cargo.toml  README.md  renovate.json  timer_settings.yaml
.github/workflows/: rust.yml
src/: draw.rs  events.rs  main.rs  settings.rs  shapes.rs  sound.rs  state.rs  term.rs  timer.rs
src/timers/: mod.rs  pomodoro.rs  stopwatch.rs  timekeeper.rs  timer.rs
src/widgets/: mod.rs  status.rs  tabs.rs  timing.rs
