[package]
name = "timer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
crossterm = "0.27.0"
phf = { version = "0.11.2", features = ["macros"] }
ratatui = "0.24.0"
rodio = "0.17.3"
serde = { version = "1.0.189", features = ["derive"] }
serde_yaml = "0.9.25"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-check", "run-cargo-fmt"]
